# setup

./: .gitignore  .gitmodules  README.md  meson.build
.github/workflows/: build.yml
ext/unzip/: unzip.cpp  unzip.h
res/: botsetup.rc  botsetup.xml  resource.h
src/: botsetup.cpp
vc/: botsetup.sln  botsetup.vcxproj  botsetup.vcxproj.filters
